fixed body padding so no nav overlap

--- a/trips/static/home.css
+++ b/trips/static/home.css
@@ -3,21 +3,26 @@ body {
     height: 100%;
     width: 100%;
     background-color: #333333;
+    padding-top: 25px;
 }
 
-.main-banner {
-    height: 500px;
-    width: 100%;
-    background: url("images/carousel_1.jpg") no-repeat;
-    -webkit-background-size: contain;
-  	-moz-background-size: contain;
-  	-o-background-size: contain;
-  	background-size: contain;
-    display: table;
+@media screen and (min-width: 900px) {
+	.main-banner {
+	    height: 500px;
+	    width: 100%;
+	    background: url("images/carousel_1.jpg") no-repeat;
+	    -webkit-background-size: contain;
+	  	-moz-background-size: contain;
+	  	-o-background-size: contain;
+	  	background-size: contain;
+	    display: table;
+	}
 }
 
-.container.text-center {
-	color: #ffffff;
+@media screen and (min-width: 900px) {
+	.container.text-center {
+		color: #ffffff;
+	}
 }
 
 .row {
