--- a/trips/static/trip.css
+++ b/trips/static/trip.css
@@ -3,14 +3,10 @@ body {
     height: 100%;
     width: 100%;
     background-color: #333333;
+    padding-top: 25px;
 }
 
 .leaflet-container {  /* all maps */
     width:  100%;
-    height: 600px;
-}
-
-.span12 {
-	padding-top: 40px;
-	text-align: center;
+    height: 650px;
 }
